test/testdata/number/invalid_property_access_error.lox
1.y; // error: property access is not valid for 'number' object
